Revamp index.html for portfolio website
Updated the HTML structure and content for a personal portfolio site.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Vercel Site</title>
+  <meta charset="UTF-8">
+  <title>Syed Najeeb Mohiuddin | Portfolio</title>
 </head>
 <body>
-  <h1>Hello Mohammed 👋</h1>
-  <p>This is my first deployed website 🚀</p>
+
+  <nav>
+    <h2>SNM</h2>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="home">
+    <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
+    <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I help businesses grow digitally through modern web development 
+      and result-driven marketing strategies.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML / CSS / JavaScript</li>
+      <li>Business Analysis</li>
+      <li>SEO & Digital Marketing</li>
+      <li>Email Marketing</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>Coming Soon...</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: syed.mohiuddin042@gmail.com</p>
+  </section>
+
 </body>
 </html>
