Link stylesheet in index.html
Added a link to the external stylesheet for styling.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <title>Syed Najeeb Mohiuddin | Portfolio</title>
 </head>
@@ -52,3 +53,4 @@
 
 </body>
 </html>
+
