--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   </nav>
 
   <section id="home">
-    <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
-    <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
-  </section>
+  <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
+  <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
+  <a href="#contact" class="btn">Contact Me</a>
+</section>
+
 
   <section id="about">
     <h2>About Me</h2>
@@ -53,5 +55,6 @@
 
 </body>
 </html>
+
 
 
