--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
   <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
   <a href="#contact" class="btn">Contact Me</a>
-</section>
+  </section>
 
 
-  <section id="about">
+  <section id="about" class="section-hidden">
     <h2>About Me</h2>
     <p>
       I help businesses grow digitally through modern web development 
@@ -33,7 +33,7 @@
     </p>
   </section>
 
-  <section id="skills">
+  <section id="skills" class="section-hidden">
     <h2>Skills</h2>
     <ul>
       <li>HTML / CSS / JavaScript</li>
@@ -43,18 +43,19 @@
     </ul>
   </section>
 
-  <section id="projects">
+  <section id="projects" class="section-hidden">
     <h2>Projects</h2>
     <p>Coming Soon...</p>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="section-hidden">
     <h2>Contact Me</h2>
     <p>Email: syed.mohiuddin042@gmail.com</p>
   </section>
 
 </body>
 </html>
+
 
 
 
