Change profile image file extension
Updated profile image filename from 'profile.jpg' to 'profile.jpeg'.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="profile.jpg" alt="Syed Najeeb Mohiuddin">
+      <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
     </div>
 
   </div>
@@ -67,6 +67,7 @@
 
 </body>
 </html>
+
 
 
 
