Fix HTML structure and add reveal class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
 
- <section id="home" class="section-hidden hero">
+ <section id="home" class="section-hidden hero" class="reveal">
   <div class="hero-container">
     
     <div class="hero-text">
@@ -35,7 +35,7 @@
 </section>
 
 
-  <section id="about" class="section-hidden">
+  <section id="about" class="section-hidden" class="reveal">
     <h2>About Me</h2>
     <p>
       I help businesses grow digitally through modern web development 
@@ -43,7 +43,7 @@
     </p>
   </section>
 
-  <section id="skills" class="section-hidden">
+  <section id="skills" class="section-hidden" class="reveal">
     <h2>Skills</h2>
     <ul>
       <li>HTML / CSS / JavaScript</li>
@@ -53,12 +53,12 @@
     </ul>
   </section>
 
-  <section id="projects" class="section-hidden">
+  <section id="projects" class="section-hidden" class="reveal">
     <h2>Projects</h2>
     <p>Coming Soon...</p>
   </section>
 
-  <section id="contact" class="section-hidden">
+  <section id="contact" class="section-hidden" class="reveal">
     <h2>Contact Me</h2>
     <p>Email: syed.mohiuddin042@gmail.com</p>
   </section>
@@ -67,6 +67,7 @@
 
 </body>
 </html>
+
 
 
 
