Refactor index.html with comments and structure changes
Updated HTML structure and added comments for clarity.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+  <!-- NAVBAR -->
   <nav>
     <h2>SNM</h2>
     <ul>
@@ -18,24 +19,25 @@
     </ul>
   </nav>
 
- <section id="home" class="section-hidden hero" class="reveal">
-  <div class="hero-container">
-    
-    <div class="hero-text">
-      <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
-      <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
-      <a href="#contact" class="btn">Contact Me</a>
+  <!-- HERO SECTION -->
+  <section id="home" class="hero">
+    <div class="hero-container">
+
+      <div class="hero-text">
+        <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
+        <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
+        <a href="#contact" class="btn">Contact Me</a>
+      </div>
+
+      <div class="hero-image">
+        <img src="profile.jpg" alt="Syed Najeeb Mohiuddin">
+      </div>
+
     </div>
+  </section>
 
-    <div class="hero-image">
-      <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
-    </div>
-
-  </div>
-</section>
-
-
-  <section id="about" class="section-hidden" class="reveal">
+  <!-- ABOUT -->
+  <section id="about" class="reveal">
     <h2>About Me</h2>
     <p>
       I help businesses grow digitally through modern web development 
@@ -43,7 +45,8 @@
     </p>
   </section>
 
-  <section id="skills" class="section-hidden" class="reveal">
+  <!-- SKILLS -->
+  <section id="skills" class="reveal">
     <h2>Skills</h2>
     <ul>
       <li>HTML / CSS / JavaScript</li>
@@ -53,12 +56,14 @@
     </ul>
   </section>
 
-  <section id="projects" class="section-hidden" class="reveal">
+  <!-- PROJECTS -->
+  <section id="projects" class="reveal">
     <h2>Projects</h2>
     <p>Coming Soon...</p>
   </section>
 
-  <section id="contact" class="section-hidden" class="reveal">
+  <!-- CONTACT -->
+  <section id="contact" class="reveal">
     <h2>Contact Me</h2>
     <p>Email: syed.mohiuddin042@gmail.com</p>
   </section>
@@ -67,11 +72,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
