Change profile image format from jpg to jpeg
Updated profile image from 'profile.jpg' to 'profile.jpeg'.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="hero-image">
-        <img src="profile.jpg" alt="Syed Najeeb Mohiuddin">
+        <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
       </div>
 
     </div>
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
