--- a/index.html
+++ b/index.html
@@ -46,15 +46,22 @@
   </section>
 
   <!-- SKILLS -->
-  <section id="skills" class="reveal">
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML / CSS / JavaScript</li>
-      <li>Business Analysis</li>
-      <li>SEO & Digital Marketing</li>
-      <li>Email Marketing</li>
-    </ul>
-  </section>
+  <!-- SKILLS -->
+  <section id="skills" class="reveal skills-section">
+  <h2>My Skills</h2>
+    <div class="skills-container">
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">Business Analysis</div>
+      <div class="skill">SEO</div>
+      <div class="skill">Digital Marketing</div>
+      <div class="skill">Email Marketing</div>
+      <div class="skill">Market Research</div>
+      <div class="skill">Process Mapping</div>
+     </div>
+    </section>
+
 
   <!-- PROJECTS -->
   <section id="projects" class="reveal">
@@ -72,4 +79,5 @@
 
 </body>
 </html>
+
 
