Fix hero image source in index.html
Updated the hero image source from 'profile.jpeg' to 'profile.jpg'.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       </div>
 
       <div class="hero-image">
-        <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
+         <img src="profile.jpg" alt="Syed Najeeb Mohiuddin">
       </div>
+
 
     </div>
   </section>
@@ -78,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
