--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="hero-image">
-         <img src="profile.jpg" alt="Syed Najeeb Mohiuddin">
+         <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
       </div>
 
 
@@ -79,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
