Enhance contact section with form and email input
Added a contact form with email input and message textarea.

--- a/index.html
+++ b/index.html
@@ -70,15 +70,31 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="reveal">
+<section id="contact" class="contact-section reveal">
+  <div class="contact-container">
     <h2>Contact Me</h2>
-    <p>Email: syed.mohiuddin042@gmail.com</p>
-  </section>
+    <p>
+      Please contact me directly 
+      <a href="mailto:syed.mohiuddin042@gmail.com">
+        syed.mohiuddin042@gmail.com
+      </a>
+      or through this form
+    </p>
+
+    <form>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit" class="contact-btn">Submit ✈</button>
+    </form>
+  </div>
+</section>
+
 
   <script src="script.js"></script>
 
 </body>
 </html>
+
 
 
 
