--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <input type="email" placeholder="Your Email" required>
       <textarea placeholder="Your Message" rows="5" required></textarea>
       <button type="submit" class="contact-btn">Submit ✈</button>
+      <p class="success-message" style="display:none;">✅ Message Sent Successfully!</p>
     </form>
   </div>
 </section>
@@ -94,6 +95,7 @@
 
 </body>
 </html>
+
 
 
 
