--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 
+  <!-- ================= INTRO LOADER ================= -->
+<div id="intro-loader">
+  <h1 class="intro-text">SNM</h1>
+</div>
+
   <!-- NAVBAR -->
   <nav>
     <h2>SNM</h2>
@@ -95,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
