--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 
-  <!-- ================= INTRO LOADER ================= -->
-<div id="intro-loader">
-  <h1 class="intro-text">SNM</h1>
+<!-- ================= INTRO LOADER ================= -->
+<!-- INTRO OVERLAY -->
+<div class="intro-overlay">
+  <div class="intro-content">
+    <h1>Syed Najeeb Mohiuddin</h1>
+  </div>
 </div>
 
   <!-- NAVBAR -->
@@ -100,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
