--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
   <!-- NAVBAR -->
   <nav>
-    <h2>SNM</h2>
+    <div class="logo">
+        <img src="logo.png" alt="SNM Logo">
+    </div>
+
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -103,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
