--- a/index.html
+++ b/index.html
@@ -88,10 +88,36 @@
 <!-- ==================================================
    PROJECTS SECTION (Ready for Upgrade)
 ================================================== -->
-<section id="projects" class="reveal">
-  <h2>Projects</h2>
-  <p>Coming Soon...</p>
+
+<section id="projects" class="reveal projects-section">
+  <h2>My Projects</h2>
+
+  <div class="projects-container">
+
+    <div class="project-card">
+      <div class="project-img"></div>
+      <h3>Portfolio Website</h3>
+      <p>Modern responsive personal portfolio built using HTML, CSS & JS.</p>
+      <a href="#" class="project-btn">View Project</a>
+    </div>
+
+    <div class="project-card">
+      <div class="project-img"></div>
+      <h3>Business Landing Page</h3>
+      <p>Conversion-focused landing page for digital marketing clients.</p>
+      <a href="#" class="project-btn">View Project</a>
+    </div>
+
+    <div class="project-card">
+      <div class="project-img"></div>
+      <h3>Marketing Dashboard</h3>
+      <p>Analytics dashboard concept with performance tracking UI.</p>
+      <a href="#" class="project-btn">View Project</a>
+    </div>
+
+  </div>
 </section>
+
 
 <!-- ==================================================
    CONTACT SECTION
@@ -129,3 +155,4 @@
 
 </body>
 </html>
+
