--- a/index.html
+++ b/index.html
@@ -89,36 +89,62 @@
    PROJECTS SECTION (Ready for Upgrade)
 ================================================== -->
 
-<section id="projects" class="reveal projects-section">
-  <h2>My Projects</h2>
+<section id="projects" class="projects-section">
+
+  <h2 class="section-title reveal">My Projects</h2>
 
   <div class="projects-container">
 
-    <div class="project-card">
-      <div class="project-img"></div>
-      <h3>Portfolio Website</h3>
-      <p>Modern responsive personal portfolio built using HTML, CSS & JS.</p>
-      <a href="#" class="project-btn">View Project</a>
+    <!-- Project 1 -->
+    <div class="project-card reveal">
+      <div class="project-text">
+        <h3>LeVestie Hair</h3>
+        <p>
+          Where style meets elegance. Elevate your look with expert
+          hair care services tailored for you.
+        </p>
+
+        <div class="project-tags">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Bootstrap</span>
+        </div>
+
+        <a href="#" target="_blank" class="project-btn">View Project</a>
+      </div>
+
+      <div class="project-image">
+        <img src="project1.jpg" alt="LeVestie Hair">
+      </div>
     </div>
 
-    <div class="project-card">
-      <div class="project-img"></div>
-      <h3>Business Landing Page</h3>
-      <p>Conversion-focused landing page for digital marketing clients.</p>
-      <a href="#" class="project-btn">View Project</a>
-    </div>
+    <!-- Project 2 -->
+    <div class="project-card reveal reverse">
+      <div class="project-text">
+        <h3>Elite Sports Wear</h3>
+        <p>
+          Premium sportswear designed for performance and comfort.
+          Built using modern WordPress tools.
+        </p>
 
-    <div class="project-card">
-      <div class="project-img"></div>
-      <h3>Marketing Dashboard</h3>
-      <p>Analytics dashboard concept with performance tracking UI.</p>
-      <a href="#" class="project-btn">View Project</a>
+        <div class="project-tags">
+          <span>WordPress</span>
+          <span>Elementor</span>
+          <span>PHP</span>
+        </div>
+
+        <a href="#" target="_blank" class="project-btn">View Project</a>
+      </div>
+
+      <div class="project-image">
+        <img src="project2.jpg" alt="Elite Sports Wear">
+      </div>
     </div>
 
   </div>
 </section>
 
-
+  
 <!-- ==================================================
    CONTACT SECTION
 ================================================== -->
@@ -155,4 +181,5 @@
 
 </body>
 </html>
+
 
