--- a/index.html
+++ b/index.html
@@ -2,25 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Syed Najeeb Mohiuddin | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- ==================================================
-   INTRO OVERLAY (Optional Entry Animation)
-================================================== -->
-<div class="intro-overlay">
-  <div class="intro-content">
-    <h1>Syed Najeeb Mohiuddin</h1>
-  </div>
-</div>
-
-<!-- ==================================================
-   NAVBAR
-================================================== -->
+<!-- NAVBAR -->
 <nav>
   <div class="logo">
     <img src="logo.png" alt="SNM Logo">
@@ -35,42 +22,34 @@
   </ul>
 </nav>
 
-<!-- ==================================================
-   HERO SECTION
-================================================== -->
+<!-- HERO -->
 <section id="home">
   <div class="hero-container">
 
     <div class="hero-text">
       <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
-      <p>
-        Web Developer | Business Analyst | Digital Marketing Specialist
-      </p>
+      <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
 
     <div class="hero-image">
-      <img src="profile.jpeg" alt="Syed Najeeb Mohiuddin">
+      <img src="profile.jpeg" alt="Profile">
     </div>
 
   </div>
 </section>
 
-<!-- ==================================================
-   ABOUT SECTION
-================================================== -->
-<section id="about" class="reveal">
+<!-- ABOUT -->
+<section id="about">
   <h2>About Me</h2>
   <p>
-    I help businesses grow digitally through modern web development 
+    I help businesses grow digitally through modern web development
     and result-driven marketing strategies.
   </p>
 </section>
 
-<!-- ==================================================
-   SKILLS SECTION
-================================================== -->
-<section id="skills" class="reveal skills-section">
+<!-- SKILLS -->
+<section id="skills">
   <h2>My Skills</h2>
 
   <div class="skills-container">
@@ -85,101 +64,62 @@
   </div>
 </section>
 
-<!-- ==================================================
-   PROJECTS SECTION (Ready for Upgrade)
-================================================== -->
-
-<section id="projects" class="projects-section">
-
-  <h2 class="section-title reveal">My Projects</h2>
+<!-- PROJECTS -->
+<section id="projects">
+  <h2>My Projects</h2>
 
   <div class="projects-container">
 
-    <!-- Project 1 -->
-    <div class="project-card reveal">
+    <div class="project-card">
       <div class="project-text">
         <h3>LeVestie Hair</h3>
-        <p>
-          Where style meets elegance. Elevate your look with expert
-          hair care services tailored for you.
-        </p>
-
-        <div class="project-tags">
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>Bootstrap</span>
-        </div>
-
+        <p>Premium hair styling website built using HTML, CSS & Bootstrap.</p>
         <a href="#" target="_blank" class="project-btn">View Project</a>
-      </div>
-
-      <div class="project-image">
-        <img src="project1.jpg" alt="LeVestie Hair">
       </div>
     </div>
 
-    <!-- Project 2 -->
-    <div class="project-card reveal reverse">
+    <div class="project-card">
       <div class="project-text">
         <h3>Elite Sports Wear</h3>
-        <p>
-          Premium sportswear designed for performance and comfort.
-          Built using modern WordPress tools.
-        </p>
-
-        <div class="project-tags">
-          <span>WordPress</span>
-          <span>Elementor</span>
-          <span>PHP</span>
-        </div>
-
+        <p>Sportswear eCommerce website built using WordPress & Elementor.</p>
         <a href="#" target="_blank" class="project-btn">View Project</a>
       </div>
+    </div>
 
-      <div class="project-image">
-        <img src="project2.jpg" alt="Elite Sports Wear">
+    <div class="project-card">
+      <div class="project-text">
+        <h3>Movie Review Platform</h3>
+        <p>Movie discovery & rating platform built with modern technologies.</p>
+        <a href="#" target="_blank" class="project-btn">View Project</a>
+      </div>
+    </div>
+
+    <!-- Ingenious IT Solutions Portfolio -->
+    <div class="project-card">
+      <div class="project-text">
+        <h3>Ingenious IT Solutions Portfolio</h3>
+        <p>Collection of client websites and professional projects delivered so far.</p>
+        <a href="https://www.ingeniousitsolutions.in/portfolio_1.html" target="_blank" class="project-btn">
+          View All Projects
+        </a>
       </div>
     </div>
 
   </div>
 </section>
 
-  
-<!-- ==================================================
-   CONTACT SECTION
-================================================== -->
-<section id="contact" class="contact-section reveal">
-  <div class="contact-container">
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact Me</h2>
 
-    <h2>Contact Me</h2>
-
-    <p>
-      Please contact me directly 
-      <a href="mailto:syed.mohiuddin042@gmail.com">
-        syed.mohiuddin042@gmail.com
-      </a>
-      or through this form
-    </p>
-
-    <form id="contactForm">
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-
-      <button type="submit" class="contact-btn">
-        Submit ✈
-      </button>
-
-      <p class="success-message">
-        ✅ Message Sent Successfully!
-      </p>
-    </form>
-
-  </div>
+  <form id="contactForm">
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Your Message" rows="5" required></textarea>
+    <button type="submit" class="btn">Submit</button>
+    <p class="success-message">Message Sent Successfully!</p>
+  </form>
 </section>
 
 <script src="script.js"></script>
-
 </body>
 </html>
-
-
