--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
+<!-- ================= NAVBAR ================= -->
 <nav>
   <div class="logo">
     <img src="logo.png" alt="SNM Logo">
@@ -22,10 +22,9 @@
   </ul>
 </nav>
 
-<!-- HERO -->
+<!-- ================= HERO ================= -->
 <section id="home">
   <div class="hero-container">
-
     <div class="hero-text">
       <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
       <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
@@ -35,20 +34,19 @@
     <div class="hero-image">
       <img src="profile.jpeg" alt="Profile">
     </div>
-
   </div>
 </section>
 
-<!-- ABOUT -->
+<!-- ================= ABOUT ================= -->
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I help businesses grow digitally through modern web development
+    I help businesses grow digitally through modern web development 
     and result-driven marketing strategies.
   </p>
 </section>
 
-<!-- SKILLS -->
+<!-- ================= SKILLS ================= -->
 <section id="skills">
   <h2>My Skills</h2>
 
@@ -64,60 +62,64 @@
   </div>
 </section>
 
-<!-- PROJECTS -->
+<!-- ================= PROJECTS ================= -->
 <section id="projects">
   <h2>My Projects</h2>
 
   <div class="projects-container">
 
     <div class="project-card">
-      <div class="project-text">
-        <h3>LeVestie Hair</h3>
-        <p>Premium hair styling website built using HTML, CSS & Bootstrap.</p>
-        <a href="#" target="_blank" class="project-btn">View Project</a>
-      </div>
+      <h3>National Driving School</h3>
+      <p>Professional driving school website with structured booking system.</p>
+      <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
-      <div class="project-text">
-        <h3>Elite Sports Wear</h3>
-        <p>Sportswear eCommerce website built using WordPress & Elementor.</p>
-        <a href="#" target="_blank" class="project-btn">View Project</a>
-      </div>
+      <h3>My Tax Pro Now</h3>
+      <p>Tax and accounting service website focused on lead generation.</p>
+      <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
-      <div class="project-text">
-        <h3>Movie Review Platform</h3>
-        <p>Movie discovery & rating platform built with modern technologies.</p>
-        <a href="#" target="_blank" class="project-btn">View Project</a>
-      </div>
+      <h3>Bell Tech Computer</h3>
+      <p>Technology solutions website showcasing IT services.</p>
+      <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
-    <!-- Ingenious IT Solutions Portfolio -->
     <div class="project-card">
-      <div class="project-text">
-        <h3>Ingenious IT Solutions Portfolio</h3>
-        <p>Collection of client websites and professional projects delivered so far.</p>
-        <a href="https://www.ingeniousitsolutions.in/portfolio_1.html" target="_blank" class="project-btn">
-          View All Projects
-        </a>
-      </div>
+      <h3>I2 Data Systems</h3>
+      <p>Corporate business solutions and data systems website.</p>
+      <a href="http://www.i2datasystems.com/" target="_blank" class="project-btn">Visit Website</a>
+    </div>
+
+    <div class="project-card">
+      <h3>Telecom Worldwide</h3>
+      <p>Global telecom services company website.</p>
+      <a href="https://www.telecomworldwide.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
   </div>
 </section>
 
-<!-- CONTACT -->
+<!-- ================= CONTACT ================= -->
 <section id="contact">
-  <h2>Contact Me</h2>
+  <div class="contact-container">
+    <h2>Contact Me</h2>
+    <p>
+      Please contact me directly
+      <a href="mailto:syed.mohiuddin042@gmail.com">
+        syed.mohiuddin042@gmail.com
+      </a>
+      or through this form.
+    </p>
 
-  <form id="contactForm">
-    <input type="email" placeholder="Your Email" required>
-    <textarea placeholder="Your Message" rows="5" required></textarea>
-    <button type="submit" class="btn">Submit</button>
-    <p class="success-message">Message Sent Successfully!</p>
-  </form>
+    <form id="contactForm">
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit" class="contact-btn">Submit</button>
+      <p class="success-message">Message Sent Successfully!</p>
+    </form>
+  </div>
 </section>
 
 <script src="script.js"></script>
