--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 </head>
 <body>
 
-<!-- ================= NAVBAR ================= -->
+<!-- NAVBAR -->
 <nav>
   <div class="logo">
     <img src="logo.png" alt="SNM Logo">
   </div>
-
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
@@ -22,7 +21,7 @@
   </ul>
 </nav>
 
-<!-- ================= HERO ================= -->
+<!-- HERO -->
 <section id="home">
   <div class="hero-container">
     <div class="hero-text">
@@ -30,15 +29,14 @@
       <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
       <a href="#contact" class="btn">Contact Me</a>
     </div>
-
     <div class="hero-image">
       <img src="profile.jpeg" alt="Profile">
     </div>
   </div>
 </section>
 
-<!-- ================= ABOUT ================= -->
-<section id="about">
+<!-- ABOUT -->
+<section id="about" class="reveal">
   <h2>About Me</h2>
   <p>
     I help businesses grow digitally through modern web development 
@@ -46,10 +44,9 @@
   </p>
 </section>
 
-<!-- ================= SKILLS ================= -->
-<section id="skills">
+<!-- SKILLS -->
+<section id="skills" class="reveal">
   <h2>My Skills</h2>
-
   <div class="skills-container">
     <div class="skill">SEO</div>
     <div class="skill">CSS</div>
@@ -62,62 +59,48 @@
   </div>
 </section>
 
-<!-- ================= PROJECTS ================= -->
-<section id="projects">
+<!-- PROJECTS -->
+<section id="projects" class="reveal">
   <h2>My Projects</h2>
-
   <div class="projects-container">
 
     <div class="project-card">
       <h3>National Driving School</h3>
-      <p>Professional driving school website with structured booking system.</p>
       <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
       <h3>My Tax Pro Now</h3>
-      <p>Tax and accounting service website focused on lead generation.</p>
       <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
       <h3>Bell Tech Computer</h3>
-      <p>Technology solutions website showcasing IT services.</p>
       <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
       <h3>I2 Data Systems</h3>
-      <p>Corporate business solutions and data systems website.</p>
       <a href="http://www.i2datasystems.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
     <div class="project-card">
       <h3>Telecom Worldwide</h3>
-      <p>Global telecom services company website.</p>
       <a href="https://www.telecomworldwide.com/" target="_blank" class="project-btn">Visit Website</a>
     </div>
 
   </div>
 </section>
 
-<!-- ================= CONTACT ================= -->
-<section id="contact">
+<!-- CONTACT -->
+<section id="contact" class="reveal contact-section">
   <div class="contact-container">
     <h2>Contact Me</h2>
-    <p>
-      Please contact me directly
-      <a href="mailto:syed.mohiuddin042@gmail.com">
-        syed.mohiuddin042@gmail.com
-      </a>
-      or through this form.
-    </p>
-
     <form id="contactForm">
       <input type="email" placeholder="Your Email" required>
       <textarea placeholder="Your Message" rows="5" required></textarea>
       <button type="submit" class="contact-btn">Submit</button>
-      <p class="success-message">Message Sent Successfully!</p>
+      <p class="success-message">✅ Message Sent Successfully!</p>
     </form>
   </div>
 </section>
