--- a/index.html
+++ b/index.html
@@ -38,11 +38,37 @@
 <!-- ABOUT -->
 <section id="about" class="reveal">
   <h2>About Me</h2>
-  <p>
-    I help businesses grow digitally through modern web development 
-    and result-driven marketing strategies.
-  </p>
+
+  <div class="about-content">
+    <p>
+      I am a results-driven <strong>Data Analyst</strong> with hands-on experience in 
+      <strong>Python, SQL, Power BI, and Excel</strong>, specializing in data cleaning, 
+      analysis, visualization, and automation.
+    </p>
+
+    <p>
+      With over 1 year of dedicated data analytics experience — including supporting 
+      U.S. operations remotely — I focus on transforming complex datasets into 
+      clear, actionable business insights.
+    </p>
+
+    <p>
+      My background combines 5+ years in IT recruitment, inside sales, and client 
+      relationship management, giving me strong business acumen alongside 
+      technical expertise. I have successfully automated reporting processes, 
+      developed interactive dashboards, and delivered data-driven recommendations 
+      that improved operational efficiency and decision-making.
+    </p>
+
+    <p>
+      With an engineering foundation and strong analytical mindset, I am passionate 
+      about leveraging data to optimize processes, drive performance, and support 
+      strategic growth within dynamic IT and data teams across Saudi Arabia and 
+      the GCC.
+    </p>
+  </div>
 </section>
+
 
 <!-- SKILLS -->
 <section id="skills" class="reveal">
@@ -108,3 +134,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
