--- a/index.html
+++ b/index.html
@@ -131,7 +131,27 @@
   </div>
 </section>
 
+<!-- ================= FOOTER ================= -->
+<footer class="site-footer">
+  <div class="footer-content">
+    <div class="footer-left">
+      <img src="logo.png" alt="SNM Logo">
+      <p>© 2026 Syed Najeeb Mohiuddin</p>
+    </div>
+
+    <ul class="footer-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
+</footer>
+
+
 <script src="script.js"></script>
 </body>
 </html>
+
 
