--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Syed Najeeb Mohiuddin | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -153,5 +154,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
