--- a/index.html
+++ b/index.html
@@ -87,37 +87,72 @@
 </section>
 
 <!-- PROJECTS -->
+<!-- ================= PROJECTS ================= -->
 <section id="projects" class="reveal">
   <h2>My Projects</h2>
+
   <div class="projects-container">
 
+    <!-- Project 1 -->
     <div class="project-card">
-      <h3>National Driving School</h3>
-      <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">Visit Website</a>
+      <div class="project-image">
+        <img src="project1.jpg" alt="National Driving School">
+      </div>
+
+      <div class="project-content">
+        <h3>National Driving School</h3>
+        <p>
+          Professional driving school website with course details,
+          booking system and responsive design.
+        </p>
+
+        <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">
+          Visit Website
+        </a>
+      </div>
     </div>
 
+    <!-- Project 2 -->
     <div class="project-card">
-      <h3>My Tax Pro Now</h3>
-      <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">Visit Website</a>
+      <div class="project-image">
+        <img src="project2.jpg" alt="My Tax Pro Now">
+      </div>
+
+      <div class="project-content">
+        <h3>My Tax Pro Now</h3>
+        <p>
+          Tax consulting platform built for U.S. clients with
+          professional layout and lead generation focus.
+        </p>
+
+        <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">
+          Visit Website
+        </a>
+      </div>
     </div>
 
+    <!-- Project 3 -->
     <div class="project-card">
-      <h3>Bell Tech Computer</h3>
-      <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">Visit Website</a>
-    </div>
+      <div class="project-image">
+        <img src="project3.jpg" alt="Bell Tech Computer">
+      </div>
 
-    <div class="project-card">
-      <h3>I2 Data Systems</h3>
-      <a href="http://www.i2datasystems.com/" target="_blank" class="project-btn">Visit Website</a>
-    </div>
+      <div class="project-content">
+        <h3>Bell Tech Computer</h3>
+        <p>
+          IT solutions website showcasing hardware, services,
+          and business offerings.
+        </p>
 
-    <div class="project-card">
-      <h3>Telecom Worldwide</h3>
-      <a href="https://www.telecomworldwide.com/" target="_blank" class="project-btn">Visit Website</a>
+        <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">
+          Visit Website
+        </a>
+      </div>
     </div>
 
   </div>
 </section>
+
 
 <!-- CONTACT -->
 <section id="contact" class="reveal contact-section">
@@ -154,6 +189,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
