--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 </section>
 
 <!-- PROJECTS -->
-<!-- ================= PROJECTS ================= -->
 <section id="projects" class="reveal">
   <h2>My Projects</h2>
 
@@ -123,35 +122,105 @@
         <p>
           Tax consulting platform built for U.S. clients with
           professional layout and lead generation focus.
-        </p>
+        </p><div class="projects-container">
 
-        <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">
-          Visit Website
+  <!-- Project 1 -->
+  <div class="project-card reveal">
+    <div class="project-image">
+      <img src="project1.jpg" alt="National Driving School">
+    </div>
+
+    <div class="project-content">
+      <h3>National Driving School</h3>
+
+      <div class="project-tags">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>Responsive</span>
+      </div>
+
+      <p>
+        Professional driving school website with course details,
+        booking system and responsive design.
+      </p>
+
+      <div class="project-buttons">
+        <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">
+          Live Website
+        </a>
+        <a href="#" class="project-btn secondary">
+          View Code
         </a>
       </div>
     </div>
-
-    <!-- Project 3 -->
-    <div class="project-card">
-      <div class="project-image">
-        <img src="project3.jpg" alt="Bell Tech Computer">
-      </div>
-
-      <div class="project-content">
-        <h3>Bell Tech Computer</h3>
-        <p>
-          IT solutions website showcasing hardware, services,
-          and business offerings.
-        </p>
-
-        <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">
-          Visit Website
-        </a>
-      </div>
-    </div>
-
   </div>
-</section>
+
+
+  <!-- Project 2 -->
+  <div class="project-card reveal reverse">
+    <div class="project-image">
+      <img src="project2.jpg" alt="My Tax Pro Now">
+    </div>
+
+    <div class="project-content">
+      <h3>My Tax Pro Now</h3>
+
+      <div class="project-tags">
+        <span>WordPress</span>
+        <span>SEO</span>
+        <span>Lead Generation</span>
+      </div>
+
+      <p>
+        Tax consulting platform built for U.S. clients with
+        professional layout and conversion-focused design.
+      </p>
+
+      <div class="project-buttons">
+        <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">
+          Live Website
+        </a>
+        <a href="#" class="project-btn secondary">
+          View Code
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Project 3 -->
+  <div class="project-card reveal">
+    <div class="project-image">
+      <img src="project3.jpg" alt="Bell Tech Computer">
+    </div>
+
+    <div class="project-content">
+      <h3>Bell Tech Computer</h3>
+
+      <div class="project-tags">
+        <span>IT Services</span>
+        <span>Business Website</span>
+        <span>UI Design</span>
+      </div>
+
+      <p>
+        IT solutions website showcasing hardware, services,
+        and business offerings with strong brand presentation.
+      </p>
+
+      <div class="project-buttons">
+        <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">
+          Live Website
+        </a>
+        <a href="#" class="project-btn secondary">
+          View Code
+        </a>
+      </div>
+    </div>
+  </div>
+
+</div>
 
 
 <!-- CONTACT -->
@@ -189,6 +258,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
